--- a/deeplearning2/Run.ipynb
+++ b/deeplearning2/Run.ipynb
@@ -153,8 +153,7 @@
     "\n",
     "\n",
     "IMG_SHAPE = (28, 28, 1)\n",
-    "BATCH_SIZE = 1024\n",
-    "BUFFER_SIZE = 2048\n",
+    "BATCH_SIZE = 512\n",
     "LATENT_SIZE = 128\n",
     "EPOCHS = 2\n",
     "VAE_PATH = './vae'\n",
@@ -169,16 +168,23 @@
     "# Reshape each sample to (28, 28, 1) and normalize the pixel values in the [-1, 1] range\n",
     "train_images = train_images.reshape(train_images.shape[0], *IMG_SHAPE).astype(\"float32\")\n",
     "dataset = tf.data.Dataset.from_tensor_slices((train_images - 127.5) / 127.5)\n",
-    "dataset = dataset.take(10).shuffle(buffer_size=2048).batch(BATCH_SIZE)\n",
-    "\n",
-    "\n",
+    "dataset = dataset.shuffle(buffer_size=len(train_images)).batch(BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff04226d-7a4a-4186-8419-4b9a1078783f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# VAE Method =================================================================\n",
     "generator = generative_model(IMG_SHAPE, LATENT_SIZE)\n",
     "vae_optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3)\n",
     "vae, encoder = get_vae(IMG_SHAPE, LATENT_SIZE, generator)\n",
     "vae.compile(vae_optimizer)\n",
     "callback = ModelMonitor(generator, IMG_SHAPE, LATENT_SIZE, VAE_PATH, 4)\n",
-    "# vae.summary()\n",
+    "vae.summary()\n",
     "vae.fit(dataset, callbacks=[callback], epochs=EPOCHS)"
    ]
   },
@@ -243,6 +249,7 @@
     "dataset = dataset.shuffle(buffer_size=BUFFER_SIZE)\n",
     "\n",
     "generator = generative_model(IMG_SHAPE, LATENT_SIZE)\n",
+    "generator.summary()\n",
     "generator_optimizer = keras.optimizers.Adam(learning_rate=0.0002, beta_1=0.5, beta_2=0.9)\n",
     "discriminator_optimizer = keras.optimizers.Adam(learning_rate=0.0002, beta_1=0.5, beta_2=0.9)\n",
     "wgan = WGAN(\n",
@@ -256,60 +263,6 @@
     "callback = ModelMonitor(generator, IMG_SHAPE, LATENT_SIZE, WGAN_PATH, 4)\n",
     "wgan.fit(train_images, batch_size=BATCH_SIZE, epochs=EPOCHS, callbacks=[callback])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f87345c4-6edf-4056-b080-2bdd2bedc871",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from keras.api import keras\n",
-    "import tensorflow as tf\n",
-    "from matplotlib import pyplot as plt\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "class ModelMonitor(keras.callbacks.Callback):\n",
-    "    def __init__(self, generator, img_shape, latent_size, path, size):\n",
-    "        super().__init__()\n",
-    "        self.size = size\n",
-    "        self.model = generator\n",
-    "        self.img_shape = img_shape\n",
-    "        self.latent_size = latent_size\n",
-    "        self.path = path\n",
-    "        os.makedirs(path, exist_ok=True)\n",
-    "        os.makedirs(path + '/epochs', exist_ok=True)\n",
-    "        os.makedirs(path + '/checkpoints', exist_ok=True)\n",
-    "\n",
-    "    def on_epoch_end(self, epoch, **kwargs):\n",
-    "        random_latent_vectors = tf.random.normal(shape=(self.size * self.size, self.latent_size))\n",
-    "        generated_images = self.model(random_latent_vectors)\n",
-    "        generated_images = (generated_images * 127.5) + 127.5\n",
-    "        grid = np.array(generated_images)\n",
-    "        grid = (\n",
-    "            grid.reshape(self.size, self.size, self.img_shape[0], self.img_shape[0])\n",
-    "                .swapaxes(1, 2)\n",
-    "                .reshape(self.img_shape[0] * self.size, self.img_shape[0] * self.size)\n",
-    "        )\n",
-    "        plt.figure(figsize=(8, 8))\n",
-    "        plt.imsave('{}/epochs/{}.png'.format(self.path, epoch), grid, cmap='gray', vmin=0, vmax=255)\n",
-    "        plt.imshow(grid, cmap='gray', vmin=0, vmax=255)\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
-    "monitor = ModelMonitor(generator, IMG_SHAPE, LATENT_SIZE, VAE_PATH, 10)\n",
-    "monitor.on_epoch_end(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21db17db-b710-4069-b410-9ad518b088da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
